--- a/templates/index.html
+++ b/templates/index.html
@@ -49,6 +49,7 @@
             for (let i = 0; i < articles.length; i++) {
               let title = articles[i]["title"];
               let content = articles[i]["content"];
+              let time = articles[i]['time'] || '????.??.??';
               let file = articles[i]['file'];
               let profile = articles[i]['profile']
               let temp_html = `
@@ -68,7 +69,7 @@
             />
               <h5 class="card-title">${title}</h5>
               <p class="card-text">${content}</p>
-              <h6 class="card-subtitle mb-2 text-muted">2022.02.14</h6>
+              <h6 class="card-subtitle mb-2 text-muted">${time}</h6>
             </div>
           </div>
         </div>
